feat: co host done
